# HomeCredit-CRMS

./: .gitignore  README.md  data_setup.py  pyproject.toml
notebooks/: 1_EDA.ipynb
src/: aggregator.py  config.py  utils.py
src/utils/: __init__.py  config.py  pipeline.py  utils.py  voting_model.py
